# AI-Interview

./: .env.example  .gitignore  AGENTS.md  README.md  URGENT.md  backend-start.sh  frontend-start.sh  playwright.config.js  pytest.ini  question-bank-list.html  start-dev.sh  start.sh
backend/: .env.example  pyproject.toml  requirement.txt  requirements-ci.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  errors.py  logging_setup.py  logging_utils.py  security.py
backend/app/domain/: interview_state.py
backend/app/models/: schemas.py
backend/app/repositories/: interview_repository.py
backend/app/services/: audit_service.py  auth_service.py  code_execution_service.py  coding_practice_service.py  interview_schedule_service.py  interview_service.py  material_import_service.py  practice_service.py  question_bank_service.py  question_workflow.py  rag_service.py  report_service.py  report_worker.py  resume_parse_service.py  turn_worker.py  voice_service.py
backend/assets/charter/: AI模拟面试与能力提升平台 Project Charter 组长姓名.md
backend/logs/interview_resume_context/: resume_context.log.2026-05-23  (+2 more)
backend/migrations/: 0001_init.sql  0002_seed_roles.sql  0003_auth_accounts.sql  0003_turn_pipeline_meta.sql  0004_turn_pipeline_meta.sql  0005_auth_backfill_dev_admin.sql  0005_resume_playback_user_scope.sql  0006_practice_domain.sql  0006_turn_generation_mode.sql  0007_resume_playback_user_scope.sql  0008_jd_binding.sql  0009_companies.sql  0010_practice_choice_questions.sql  0011_voice_tone_profiles.sql  0012_interview_schedules.sql
data/: README.md
(+602 files in other folders)
