[project]
name = "ai-interview-backend"
version = "0.1.0"
description = "AI 模拟面试平台后端服务"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.122.0,<0.123.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "pyjwt>=2.10.0,<3.0.0",
  "openai>=2.11.0,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "chromadb>=0.5.5,<0.6.0",
  "langchain>=0.3.0,<0.4.0",
  "langgraph>=0.2.0,<0.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.5.0,<0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
